# CaseMaker

./: .gitignore  CHANGELOG.md  README.md
casemaker-app/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  triage-live-qa.mjs  tsconfig.app.json  tsconfig.scripts.json  vite.config.ts  vitest.config.ts
casemaker-app/.github/workflows/: ci.yml  playwright.yml  windows-installer.yml
casemaker-app/scripts/: cpanel-quota.mjs  deploy-cpanel.mjs  export-sample.ts  render-images.mjs
casemaker-app/src/: App.tsx  main.tsx  vite-env.d.ts
casemaker-app/src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
casemaker-app/src-tauri/capabilities/: default.json
casemaker-app/src-tauri/src/: config.rs  lib.rs  main.rs  server.rs
casemaker-app/src/docs/: CHANGELOG.md  CONTRIBUTING.md  architectural-review-2026-04.md  board-assets.md  deployment.md  getting-started.md  index.ts  snap-fit.md  technical-reference.md  user-manual.md
casemaker-app/src/engine/: coords.ts  exportLayout.ts  exportTrigger.ts
casemaker-app/src/hooks/: useRebuildOnProjectChange.ts
casemaker-app/src/store/: jobStore.ts  persistence.ts  projectSchema.ts  projectStore.ts  viewportStore.ts
casemaker-app/src/styles/: index.css  tokens.css
casemaker-app/src/testing/: windowApi.ts
casemaker-app/src/types/: board.ts  case.ts  fan.ts  hat.ts  index.ts  mesh.ts  mounting.ts  (+5 more)
docs/: casemaker.md
samples/: README.md  esp32-devkit-snap-fit.stl  rpi-3b-snap-fit-calibration.stl  snap-fit-calibration-30x30.stl
samples/cad-references/: README.md
(+148 files in other folders)
